# hackathon-ids

./: Cargo.toml  README.md  setup_links.sh
hackathon-ids/: Cargo.toml
hackathon-ids-common/: Cargo.toml
hackathon-ids-common/src/: lib.rs
hackathon-ids-ebpf/: Cargo.toml  rustc-ice-2024-05-22T14_10_20-507539.txt  rustc-ice-2024-05-22T14_10_20-507540.txt  rustc-ice-2024-05-22T14_10_30-507625.txt  rustc-ice-2024-05-22T14_10_30-507626.txt
hackathon-ids-ebpf/src/: main.rs
hackathon-ids/src/: main.rs
ml/: Cargo.toml
ml/guide.lock/: config.json  model.mpk
ml/guide.lock/checkpoint/: model-2.mpk  optim-2.mpk  optim-3.mpk  scheduler-3.mpk
ml/src/: data.rs  inference.rs  lib.rs  main.rs  model.rs  training.rs
xtask/src/: build_ebpf.rs  run.rs
