[package]
name = "hackathon-ids"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
hackathon-ids-common = { path = "../hackathon-ids-common", features = ["user"] }
anyhow = "1"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
tokio-util = "0.7"
burn = { version = "0.13.2", features = ["wgpu", "ndarray", "train"] }
ml = { path = "../ml"}

[[bin]]
name = "hackathon-ids"
path = "src/main.rs"
